[package]
name = "faust_jit"
version = "0.1.0"
edition = "2021"
authors = ["Yves Pares <yves.pares@gmail.com>"]
license = "ISC"
homepage = "https://github.com/YPares/nih-faust-jit"
description = "Loading Faust DSP scripts"

[lib]
crate-type = ["lib"]

[dependencies]
chksum-sha1 = "0.0.*"
rand = "0.8.*"

[build-dependencies]
cc = "1.0.*"
bindgen = "0.69.*"
glob = "0.3.*"

[features]
"define_faust_static_vars" = []
"default" = ["define_faust_static_vars"]
