[package]
name = "faust_jit"
version = "0.1.0"
edition = "2021"
authors = ["Yves Pares <yves.pares@gmail.com>"]
license = "ISC"
homepage = "https://github.com/YPares/nih-faust-jit"
description = "Loading Faust DSP scripts"

[lib]
crate-type = ["lib"]

[dependencies]
chksum-sha1 = "*"
rand = "*"

[build-dependencies]
cc = "*"
bindgen = "*"
glob = "*"

[features]
"define_faust_static_vars" = []
"default" = ["define_faust_static_vars"]
