[package]
name = "faust_jit"
version = "0.1.0"
edition = "2021"
authors = ["Yves Pares <yves.pares@gmail.com>"]
license = "ISC"
homepage = "https://github.com/YPares/nih-faust-jit"
description = "Loading Faust DSP scripts"

[lib]
crate-type = ["lib"]

[dependencies]
chksum-sha1 = "*"
rand = "*"
fundsp = { version = "*", optional = true }

[build-dependencies]
cc = "*"
bindgen = "*"
glob = "*"

[features]
"default" = ["define_faust_static_vars"]
"define_faust_static_vars" = []
"fundsp" = ["dep:fundsp"]
