[package]
name = "faust_jit_egui"
version = "0.1.0"
edition = "2021"
authors = ["Yves Pares <yves.pares@gmail.com>"]
license = "ISC"
homepage = "https://github.com/YPares/nih-faust-jit"
description = "egui widgets for faust_jit"

[lib]
crate-type = ["lib"]

[dependencies]
faust_jit = { path = "../faust_jit" }
egui = "0.26.*"
