[package]
name = "nih_faust_jit"
version = "0.1.0"
edition = "2021"
authors = ["Yves Pares <yves.pares@gmail.com>"]
license = "ISC"
homepage = "https://github.com/YPares/nih-faust-jit"
description = "Loading Faust DSP scripts"
default-run = "nih_faust_jit_standalone"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "nih_faust_jit_standalone"
path = "src/standalone.rs"

[dependencies]
faust_jit = { path = "../faust_jit" }
faust_jit_egui = { path = "../faust_jit_egui" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "standalone"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }
egui_file = "0.16.*"
serde = "*"
crossbeam = "*"
strum = "0.26.*"
strum_macros = "0.26.*"
